# alpaca-trading

./: .env.example  .gitignore  docker-compose.yml
broker-server/: package-lock.json  package.json
dashboard/: app.py
database/: schema.sql
deploy/: DEPLOY_CHECKLIST.md  alpaca-crypto-monitor.service  alpaca-crypto.service  alpaca-crypto.timer  alpaca-daily.service  alpaca-daily.timer  alpaca-intraday.service  alpaca-intraday.timer  alpaca-logrotate.conf  alpaca-monitor.service  install_services.sh  push_to_github.sh  setup_droplet.sh
market-data-server/: app.py  pyproject.toml  server.py
scripts/: backtest.py  backtest_all.py  backtest_crypto.py  crypto_cron.sh  daily_cron.sh  (+9 more)
strategy-engine/: alerting.py  engine.py  pyproject.toml
strategy-engine/backtester/: costs.py  engine.py  metrics.py  monte_carlo.py
strategy-engine/crypto/: __init__.py  backtester.py  btc_dominance.py  engine.py  profit_targets.py  regime.py  strategy_configs.py  universe.py
strategy-engine/data/: cache.py  store.py
strategy-engine/portfolio/: correlation.py  drawdown.py  execution.py  optimizer.py  position_metadata.py  profit_targets.py  sizing.py  trade_logger.py  universe.py
strategy-engine/regime/: allocator.py  detector.py
strategy-engine/signals/: filter.py  generator.py
strategy-engine/strategies/: base.py  earnings_momentum.py  gap_trading.py  mean_reversion.py  momentum.py  sector_rotation.py  sentiment.py  sentiment_fetcher.py  trend_following.py
strategy-engine/tests/: test_crypto.py  test_stage3_strategies.py  test_stage4_execution.py  test_stage5_risk.py
(+23 files in other folders)
